--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  margin: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.box {
+  box-shadow: -4px 10px 35px -1px rgba(0, 0, 0, 0.75);
+  min-height: 50rem;
+  margin: 30px;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: rgb(105, 101, 96);
+}
+
+h1 {
+  margin-left: 20px;
+}
+
+button {
+  float: right;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  color: rgb(243, 245, 245);
+  background-color: rgb(85, 84, 84);
+  font-weight: bold;
+}
+
+h2{
+  color: rgb(247, 246, 245);
+}
+
+p{
+  color: aliceblue;
+}
